# delorium

./: .gitignore  Cargo.toml  PROMOCLIP.md  README.md  mise.toml
bindings/uniswap_v4/: Cargo.toml
bindings/uniswap_v4/src/: i_pool_manager.rs  i_state_view.rs  iv4_quoter.rs  lib.rs
docs/: derivative-pricing-example.md
pipelines/: zkc-price-feed.toml
src/: UniswapBindings.sol  lib.rs  main.rs
