[package]
name = "delorium"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "delorium"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
indicatif = "0.17"
primitive-types = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"
